# toolauth

./: .cookiecutter.json  .env  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKERFILE  LICENSE  README.md  noxfile.py  pyproject.toml
.vim/: coc-settings.json
docs/: conf.py  index.md  reference.md  usage.md
esphome-yaml/: singlefile.yaml
hardware/mh-custom-v2/: #auto_saved_files#  BOM-old-s1-relays.csv  _autosave-mh-custom-v2.kicad_pcb  _autosave-stage1relays.kicad_sch  ade7953.kicad_sch  breakoutbaords.kicad_sch  breakoutbaords.kicad_sch-bak  esp32core.kicad_sch  fp-info-cache  lightsoundbuttons.kicad_sch  lightsounds.kicad_sch  mainslevelcontrol.kicad_sch  mh-custom-v2.csv  mh-custom-v2.kicad_pcb  mh-custom-v2.kicad_prl  mh-custom-v2.kicad_pro  mh-custom-v2.kicad_sch  mh-custom-v2.xml  microcontroller.kicad_sch  stage1relays.kicad_sch  stage1relays.kicad_sch-bak  stage2relay.kicad_sch  stage2relay.kicad_sch-bak  stage3contactor.kicad_sch
hardware/mh-custom-v2/geometry/: b-cu.dxf  edge-cuts-2.dxf  edge-cuts-3.dxf  edge-cuts.dxf  groundplane.dxf  warning-zone2.dxf
hardware/mh-custom-v2/jlcpcb/: mh-custom-v2-B_Cu.gbl  mh-custom-v2-B_Mask.gbs  mh-custom-v2-B_Paste.gbp  mh-custom-v2-B_Silkscreen.gbo  mh-custom-v2-Edge_Cuts.gm1  mh-custom-v2-F_Cu.gtl  mh-custom-v2-F_Mask.gts  mh-custom-v2-F_Paste.gtp  mh-custom-v2-F_Silkscreen.gto  mh-custom-v2-NPTH-drl_map.gbr  mh-custom-v2-NPTH.drl  mh-custom-v2-PTH-drl_map.gbr  mh-custom-v2-PTH.drl  mh-custom-v2-bottom.pos  (+4 more)
src/toolauth/: __init__.py  __main__.py  config.py  data.py  models.py  schema.sql  views.py
tests/: __init__.py  test_main.py
toolauth/: __init__.py
toolauth/auth_api/: __inti__.py  routes.py
toolauth/crud_gui/: __init__.py  routes.py  services.py
toolauth/db/: config.py
toolauth/templates/: index.html
(+92 files in other folders)
