[tool.poetry]
name = "toolauth"
version = "0.1.0"
description = ""
authors = ["Corey Rice <crice009@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
quart = "^0.18.3"
quart-schema = "^0.14.3"
aioesphomeapi = "^12.0.0"
flask-sqlalchemy = "^3.0.2"
PyYAML = "^6.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
init_db = "toolauth:init_db"
start = "toolauth:run"